# aery

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: devcontainer.json
benches/: flecs.rs  tree.rs
examples/: README.md  cleanup.rs  in_range.rs  simple.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: commands.rs  composer.rs  edges.rs  events.rs  for_each.rs  genealogy.rs  lib.rs  operations.rs  ops.rs  relation.rs  scope.rs  tuple_traits.rs
src/for_each/: for_each_2arity.rs  for_each_3arity.rs  for_each_4arity.rs  mod.rs
src/operations/: for_each.rs  mod.rs  utils.rs
