[package]
name = "aery"
version = "0.7.0"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/aery"
description = "Non-fragmenting ZST relations for Bevy."
keywords = ["bevy", "relations", "game", "ecs"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
bevy_derive = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
bevy_hierarchy = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
bevy_log = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
bevy_utils = { git = "https://github.com/iiYese/bevy.git", branch = "main" }
smallvec = "1.11.0"
aery_macros = { path = "macros", version = "0.3.0-dev" }
aquamarine = "0.3.2"

[dev-dependencies]
bevy = { git = "https://github.com/iiYese/bevy.git", branch = "main", features = ["wayland"] }
